syntax = "proto3";

message RPCMessage {
  oneof msg_type {
    Request request = 2;
    Response response = 3;
    Event event = 4;
  }
}

message Request {
  string rpc_name = 1;
  bytes request_buffer = 2;
  int32 tracking_id = 3;
}

message Response {
  message Empty {
  };

  int32 tracking_id = 1;

  oneof returned {
    bytes response_buffer = 2;
    string error_message = 3;
    Empty empty = 4;
  }
}

message Event {
  string name = 1;
  bytes buffer = 2;
}