syntax = "proto3";

service TestService {
  rpc testRpc(TestRequest) returns (TestResponse) {};
}

message TestRequest {
  string req_text = 1;
}

message TestResponse {
  string resp_text = 1;
}

message TestEvent {
  string event_data = 1;
}